--- a/pages/gist.html
+++ b/pages/gist.html
@@ -2,7 +2,6 @@
 layout: default
 permalink: /pages/gist/
 ---
-
 <div class="home">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/2.1.0/showdown.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/showdown-table@1.0.1/dist/showdown-table.min.js"></script>
@@ -19,8 +18,10 @@ permalink: /pages/gist/
 			var converter = new showdown.Converter({extensions: ['table']});
 			var file = (data.files[Object.keys(data.files)]);
 			var html = file.content;
-			if(file.filename.split(".").slice(-1)!="md") 
-				var html = "# "+ file.filename + "\n"+ data.description +"\n```"+file.filename.split(".").slice(-1)+"\n"+html+"\n```"
+			if(file.filename.split(".").slice(-1)!="md" || html.indexOf("# ") != 0)
+				var html = file.filename.split(".").slice(-1)!="md"
+					? "# "+ file.filename + "\n" + data.description +"\n```"+file.filename.split(".").slice(-1)+"\n"+html+"\n```"
+					: "# "+ file.filename + "  \n" + html
 			var html = converter.makeHtml(html);
 			html.replace("","");
 			$("#md").append(html);
