--- a/418.html
+++ b/418.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 404
+title: 418
 hide: true
 ---
 <div 
@@ -16,11 +16,13 @@ hide: true
         transform: translateY(-40%);
     "
 >
-  <h1>404</h1>
-  <p><strong>File not found</strong></p>
+  <h1>418</h1>
+  <p><strong>I’m a beer filler 🍺</strong></p>
   <p>
-    The site configured at this address does not
-    contain the requested file.
+    Sorry, but I can't answer your request, I'm a beer filler.
+    It may have been a mistake, but we hope it brightened your day. 
+    If you have any serious questions, please try again or contact my creator.
+    Either way, don't forget to toast to error 418 and continue your Internet quest! 🍻
   </p>
   <div id="suggestions">
     <a href="https://githubstatus.com">GitHub Status</a>
