--- a/404.html
+++ b/404.html
@@ -4,23 +4,14 @@ title: 404
 hide: true
 ---
 <div 
-    class="container" 
-    style="
-        text-align: center;
-        margin: 0;
-        position: absolute;
-        top: 40%;
-        left: 0px;
-        right: 0px;
-        -ms-transform: translateY(-40%);
-        transform: translateY(-40%);
-    "
+  class="home" 
+  style="text-align: center;"
 >
   <h1>404</h1>
-  <p><strong>File not found</strong></p>
+  <p><strong>Fichier non trouvé</strong></p>
   <p>
-    The site configured at this address does not
-    contain the requested file.
+    Le site configuré à cette adresse ne contient pas
+    contient pas le fichier demandé.
   </p>
   <div id="suggestions">
     <a href="https://githubstatus.com">GitHub Status</a>
