--- a/418.html
+++ b/418.html
@@ -4,25 +4,16 @@ title: 418
 hide: true
 ---
 <div 
-    class="container" 
-    style="
-        text-align: center;
-        margin: 0;
-        position: absolute;
-        top: 40%;
-        left: 0px;
-        right: 0px;
-        -ms-transform: translateY(-40%);
-        transform: translateY(-40%);
-    "
+  class="home" 
+  style="text-align: center;"
 >
   <h1>418</h1>
-  <p><strong>I’m a beer filler 🍺</strong></p>
+  <p><strong>Je suis une tireuse à bière 🍺</strong></p>
   <p>
-    Sorry, but I can't answer your request, I'm a beer filler.
-    It may have been a mistake, but we hope it brightened your day. 
-    If you have any serious questions, please try again or contact my creator.
-    Either way, don't forget to toast to error 418 and continue your Internet quest! 🍻
+    Désolé, mais je ne peux pas répondre à votre demande, je suis une tireuse à bière.
+    Il s'agit peut-être d'une erreur, mais nous espérons qu'elle a égayé votre journée. 
+    Si vous avez des questions sérieuses, réessayez ou contactez mon créateur.
+    Dans tous les cas, n'oubliez pas de porter un toast à l'erreur 418 et de poursuivre votre quête sur Internet ! 🍻
   </p>
   <div id="suggestions">
     <a href="https://githubstatus.com">GitHub Status</a>
