🎨 Add error layout

--- a/418.html
+++ b/418.html
@@ -1,24 +1,8 @@
 ---
-layout: default
-title: 418
+layout: error
+title: Erreur 418
+code: 418
+message: Je suis une tireuse à bière 🍺
+description: Désolé, mais je ne peux pas répondre à votre demande, je suis une tireuse à bière. Il s'agit peut-être d'une erreur, mais nous espérons qu'elle a égayé votre journée. Si vous avez des questions sérieuses, réessayez ou contactez mon créateur. Dans tous les cas, n'oubliez pas de porter un toast à l'erreur 418 et de poursuivre votre quête sur Internet ! 🍻
 hide: true
 ---
-<div 
-  class="home" 
-  style="text-align: center;"
->
-  <h1>418</h1>
-  <p><strong>Je suis une tireuse à bière 🍺</strong></p>
-  <p>
-    Désolé, mais je ne peux pas répondre à votre demande, je suis une tireuse à bière.
-    Il s'agit peut-être d'une erreur, mais nous espérons qu'elle a égayé votre journée. 
-    Si vous avez des questions sérieuses, réessayez ou contactez mon créateur.
-    Dans tous les cas, n'oubliez pas de porter un toast à l'erreur 418 et de poursuivre votre quête sur Internet ! 🍻
-  </p>
-  <div id="suggestions">
-    <a href="https://githubstatus.com">GitHub Status</a>
-  </div>
-  <a href="/" class="logo logo-img-1x">
-    <div id="logo" width="32" height="32" style="margin:auto;"></div>  
-  </a>
-</div>
