--- a/404.html
+++ b/404.html
@@ -1,22 +1,8 @@
 ---
-layout: default
-title: 404
+layout: error
+title: Erreur 404
+code: 400
+message: Fichier non trouvé
+description: Le site configuré à cette adresse ne contient pas contient pas le fichier demandé.
 hide: true
 ---
-<div 
-  class="home" 
-  style="text-align: center;"
->
-  <h1>404</h1>
-  <p><strong>Fichier non trouvé</strong></p>
-  <p>
-    Le site configuré à cette adresse ne contient pas
-    contient pas le fichier demandé.
-  </p>
-  <div id="suggestions">
-    <a href="https://githubstatus.com">GitHub Status</a>
-  </div>
-  <a href="/" class="logo logo-img-1x">
-    <div id="logo" width="32" height="32" style="margin:auto;"></div>  
-  </a>
-</div>
